--- a/AppointmentsManager/ClientApp/src/components/components.css
+++ b/AppointmentsManager/ClientApp/src/components/components.css
@@ -46,8 +46,8 @@ body {
 }
 
 
-.spacer-20 {
-    padding-top: 20px;
+.spacer-40 {
+    padding-top: 40px;
 }
 
 .modal-title {
@@ -73,17 +73,63 @@ body {
     margin-left: 10px;
 }
 
+.ms-30 {
+    margin-left: 30px;
+}
+
+
 .mt-15 {
     margin-top: 15px;
+}
+
+.mt-25 {
+    margin-top: 25px;
+}
+
+.py-5{
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .float-right{
     float: right;
 }
 
+input,
+select {
+    border: none;
+    outline: 1px rgb(34, 146, 239) solid;
+    padding: 2px 4px;
+}
+
+input:focus,
+select:focus{
+    outline: 1px solid gold;
+}
+
+input[type="checkbox"]{
+    height: 20px;
+    width: 40px;
+    outline: none;
+    border: 1px solid gold;
+}
+
+textarea,
+select {
+    border: none;
+    outline: 1px rgb(34, 146, 239) solid;
+    padding: 2px 4px;
+}
+
+textarea:focus,
+select:focus{
+    outline: 1px solid gold;
+}
+
 .filterBom {
     border-bottom: 1px #ccc solid;
     margin-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .filter-itemsBom div {
@@ -209,16 +255,27 @@ body {
     display: none;
 }
 
+.TitleAdress_nbom{
+    width: 400px;
+}
+
 .modal-container{
         background: #fff;
         border-radius: 9px;
-        padding: 8px;
-        min-width: 520px;
-        max-width: 85vw;
+        padding: 37px;
+        /* min-width: 520px;
+        max-width: 85vw; */
+
 }
+
+.modal-action-container{
+    padding: 10px 20px;
+}
+
 .modal-title{
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
 }
 
 .notifications {
